test page z-index and css home button and logo button fix

--- a/project-cyber/app/globals.scss
+++ b/project-cyber/app/globals.scss
@@ -223,4 +223,5 @@ body {
 
 .homebtn {
   font-weight: bold;
+  margin-right: 37.5rem;
 }
