--- a/project-cyber/app/test/globals.scss
+++ b/project-cyber/app/test/globals.scss
@@ -30,6 +30,7 @@
     width: 100%;
     height: 120%;
     transform: rotate(-45deg);
+    z-index: -1;
   }
   
   .star {
