--- a/project-cyber/styles/navbar.css
+++ b/project-cyber/styles/navbar.css
@@ -52,3 +52,6 @@
   cursor: pointer;
 }
 
+.logoIcon {
+  cursor: pointer;
+}
